# Analyti

./: .replit  README.md  app.py  demo.py  main.py  pyproject.toml
data/raw/: sample_data.csv
mlflow/559075495806467463/: meta.yaml
models/sklearn_lr_20250425_152703/: metadata.json
models/sklearn_lr_20250425_152815/: metadata.json
models/sklearn_lr_20250425_153310/: metadata.json
models/sklearn_lr_20250425_153336/: metadata.json
models/sklearn_lr_20250425_153402/: metadata.json
models/sklearn_rf_20250425_152943/: metadata.json
notebooks/: data_exploration.ipynb  model_development.ipynb
src/: config.py  data_generator.py  data_ingestion.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_training.py  risk_scoring.py  utils.py
templates/: 404.html  500.html  base.html  dashboard.html  data.html  index.html  models.html  pipeline.html  score.html
