[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "delta-spark>=3.3.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyspark>=3.5.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "werkzeug>=3.1.3",
    "xgboost>=3.0.0",
]
